# ML-Devops-Engineer-Udacity-project-1

./: .gitignore  README.md  churn_library.py  churn_notebook.ipynb  churn_script_logging_and_tests.py  pyproject.toml
models/: logistic_model.pkl
